# bitsdk_rust

./: Cargo.toml  Makefile  README.md
examples/: common.rs  privatews_demo.rs  publicws_demo.rs  rest_demo.rs
src/: bit_rest_client.rs  lib.rs
