[package]
name = "bitsdk_rust"
version = "0.1.0"
edition = "2024"
authors = ["enjoyericyeung@gmail.com"]
description = "bit.com Rust API"
repository = "https://github.com/ericyeungcode/bitsdk_rust"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = "0.4.41"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.45.0", features = ["io-std", "io-util", "macros", "rt-multi-thread"] }